--- a/frontend/src/Componentes/Signup.module.css
+++ b/frontend/src/Componentes/Signup.module.css
@@ -2,7 +2,7 @@
 .container {
   max-width: 450px;
   margin: 1.5rem auto;
-  padding: 1.9rem;
+  padding: 0.9rem 1.9rem 1.9rem 1.9rem;
   border-radius: 1.2rem;
   backdrop-filter: blur(15px);
   background-color: rgba(255, 255, 255, 0.9);
@@ -23,7 +23,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.6rem;
 }
 
 /* Input Group */
