--- a/frontend/src/Componentes/Pages/MealsDetails.module.css
+++ b/frontend/src/Componentes/Pages/MealsDetails.module.css
@@ -4,7 +4,7 @@
   padding: 2rem;
   height: 650px;
   max-width: 800px;
-  margin: 10px 10px 10px 10px;
+  margin: 10px 10px 10px 180px;
   border-radius: 1rem;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
@@ -82,7 +82,7 @@
 }
 @media (max-width: 768px) {
   .container {
-    height: 565px;
+    margin: 0;
   }
   .title {
     font-size: 1.8rem;
